Added sprite animations

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <canvas></canvas>
 
     <script src="game.js" type="module"></script>
+    <img src="" alt="" id="testImage">
 </body>
 
 </html>
