healthbar + attack damage

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           padding: 20px;
         "
       >
-        <!-- player health -->
+        <!-- player one health -->
         <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end ;">
           <div style="background-color: yellow; height: 30px; width: 100%;"></div>
           <div
-            id="playerHealth"
+            id="playerOneHealth"
             style="
               position: absolute;
               background: blue;
@@ -48,11 +48,11 @@
             flex-shrink: 0;
           "
         ></div>
-        <!-- enemy health -->
+        <!-- player two health -->
         <div style="position: relative; height: 30px; width: 100%">
           <div style="background-color: yellow; height: 30px"></div>
           <div
-            id="enemyHealth"
+            id="playerTwoHealth"
             style="
               position: absolute;
               background: blue;
