--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+    <audio src="../assets/backgrounds/china.mp3" autoplay loop controls hidden="true" ></audio>
+
     <div class="mainDiv">
       <div class="game-container">
         <!-- player one health -->
