--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+  <audio src="../assets/backgrounds/china.mp3" autoplay loop controls hidden="true"></audio>
+
   <main>
     <div class="topbar-container">
       <!-- player one health -->
