--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
   <main>
-    <div class="topbar-container">
+    <div> <img src="./street-fighter-ryu-1024x768-video-games-street-fighter-hd-art-wallpaper-preview.jpeg" class="start-background" id="startBackground" alt=""></div>
+    <div class="topbar-container" id="topBarContainer">
       <!-- player one health -->
       <div class="healthbar-container">
         <div class="healthbar-background flex-end">
@@ -43,7 +44,9 @@
       <div></div>
     </div>
 
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas">
+    </canvas>
+    <div class="start-background"></div>
 
     <div>
       <p id="winnerText" class="winner-text"></p>
