Added end of game buttons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
       <button id="startButton" class="start-button">START GAME</button>
     </div>
 
-    <div class="winner-overlay">
-      <p id="winnerText" class="winner-text"></p>
+    <div class="winner-overlay" id="winnerOverlay">
+      <div class="winner-container">
+        <p id="winnerText" class="winner-text"></p>
+        <div class="winner-button-container">
+          <button id="mainMenuButton">MAIN MENU</button>
+          <button id="playAgainButton">PLAY AGAIN</button>
+        </div>
+      </div>
     </div>
 
   </main>
